# ruclif

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  bootstrap.sh  cliff.toml  rustfmt.toml
.github/workflows/: notify.yml
ruclif/: Cargo.toml  README.md
ruclif-core/: Cargo.toml  README.md
ruclif-core/src/: builder.rs  common.rs  lib.rs  parser.rs
ruclif-parser/: Cargo.toml  README.md
ruclif-parser-clap/: Cargo.toml
ruclif-parser-clap/src/: flag.rs  helper.rs  lib.rs  string.rs
ruclif-parser-clap/src/flag/: impls.rs  tests.rs
ruclif-parser-clap/src/flag/tests/: director.rs  flag_clap_arg.rs  flag_clap_arg_builder.rs
ruclif-parser-clap/src/string/: impls.rs  tests.rs
ruclif-parser-clap/src/string/tests/: string_clap_arg.rs  string_clap_arg_builder.rs
ruclif-parser-clap/src/string/tests/string_clap_arg_builder/: director.rs
ruclif-parser/src/: lib.rs
