[workspace]
resolver = "3"
members = [
    "ruclif",
    "ruclif-core",
    "ruclif-parser",
]

[workspace.metadata.release]
pre-release-commit-message = "chore: prepare for release v{{version}}"
tag-message = "Release {{crate_name}} version {{version}}"
pre-release-replacements = [
  { file = "README.md", search = "\\d+\\.\\d+\\.\\d+", replace = "{{version}}" },
  { file = "DOCUMENTATION.md", search = "\\d+\\.\\d+\\.\\d+", replace = "{{version}}" },
  { file = "CHANGELOG.md", search = "@Unreleased", replace = "{{version}}" },
  { file = "CHANGELOG.md", search = "@ReleaseDate", replace = "{{date}} <a id=\"{{version}}\"></a>" },
  { file = "CHANGELOG.md", search = "\\[comment\\]: <> \\(@PlannedForNextRelease\\)", replace = "[comment]: <> (@PlannedForNextRelease)\n## [@Unreleased] - @ReleaseDate\n\n@Content\n" },
  { file = ".version", search = "\\d+\\.\\d+\\.\\d+", replace = "{{version}}" },
]
