[workspace]
resolver = "3"
members = ["ruclif", "ruclif-core", "ruclif-parser", "ruclif-parser-clap"]

[workspace.package]
license = "MIT OR Apache-2.0"
version = "0.1.7"
edition = "2021"
authors = ["Patacode <pata.codegineer@gmail.com>"]
repository = "https://github.com/Patacode/ruclif"

[workspace.metadata.release]
pre-release-commit-message = "chore: prepare for next release"
tag-message = "Release {{crate_name}} version {{version}}"
