[package]
name = "ruclif-parser-clap"
description = "Ruclif parser implementation around clap"

license.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
clap = "4"
ruclif-core = { path = "../ruclif-core", version = "0" }

[dev-dependencies]
speculoos = "0.13"
rstest = "0.26"
