[package]
name = "ruclif-parser"
description = "Ruclif component to parse CLI arguments"

license.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ruclif-parser-clap = { path = "../ruclif-parser-clap", version = "0" }
ruclif-core = { path = "../ruclif-core", version = "0" }
