[package]
name = "ruclif"
version = "0.1.0"
edition = "2021"
description = "Rust framework to create well-structured and easy-to-manage CLI tools"
authors = ["Patacode <pata.codegineer@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Patacode/ruclif"

[dependencies]
ruclif-core = { path = "../ruclif-core", version = "0"}
ruclif-parser = { path = "../ruclif-parser", version = "0"}

[package.metadata.release]
pre-release-commit-message = "chore: prepare for release v{{version}}"
tag-message = "Release {{crate_name}} version {{version}}"
pre-release-replacements = [
  { file = "../README.md", search = "\\d+\\.\\d+\\.\\d+", replace = "{{version}}" },
  { file = "../CHANGELOG.md", search = "@Unreleased", replace = "{{version}}" },
  { file = "../CHANGELOG.md", search = "@ReleaseDate", replace = "{{date}} <a id=\"{{version}}\"></a>" },
  { file = "../CHANGELOG.md", search = "\\[comment\\]: <> \\(@PlannedForNextRelease\\)", replace = "[comment]: <> (@PlannedForNextRelease)\n## [@Unreleased] - @ReleaseDate\n\n@Content\n" },
  { file = "../.version", search = "\\d+\\.\\d+\\.\\d+", replace = "{{version}}" },
]
